# cratr

./: .gitignore  Cargo.toml  Makefile  README.md  build_wasm.sh
src/: frontend.rs  frontend_fixed.rs  frontend_old.rs  lib.rs  main.rs
static/: cratr.js  cratr_bg.wasm  index.html  styles.css
