[package]
name = "cratr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Always available dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Server-only dependencies
actix-web = { version = "4", optional = true }
actix-multipart = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
env_logger = { version = "0.11", optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

# WASM-only dependencies
leptos = { version = "0.6", features = ["csr"], optional = true }
leptos_dom = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", optional = true }
leptos_router = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "File",
  "FileList",
  "FormData",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Document",
  "Element",
  "HtmlInputElement",
  "HtmlFormElement",
  "Event",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-net = { version = "0.4", features = ["http"], optional = true }
gloo-file = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# UUID with conditional features for WASM compatibility
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["server"]
server = [
  "dep:actix-web",
  "dep:actix-multipart", 
  "dep:actix-files",
  "dep:tokio",
  "dep:env_logger",
  "dep:futures-util",
  "dep:clap"
]
frontend = [
  "dep:leptos",
  "dep:leptos_dom",
  "dep:leptos_meta",
  "dep:leptos_router",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:console_error_panic_hook",
  "dep:web-sys",
  "dep:js-sys",
  "dep:gloo-net",
  "dep:gloo-file",
  "dep:gloo-timers",
  "dep:log",
  "dep:futures"
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cratr"
path = "src/main.rs"
required-features = ["server"]
